--- a/app/src/main/res/layout/fragment_add_images.xml
+++ b/app/src/main/res/layout/fragment_add_images.xml
@@ -77,100 +77,6 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/imgCategoryLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="@style/CardViewTheme"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="5dp"
-                app:cardElevation="2dp"
-                android:visibility="gone"
-                app:layout_constraintCircleRadius="10dp"
-                android:layout_marginEnd="10dp"
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="@color/secondaryBackground"
-                app:layout_constraintStart_toStartOf="@id/imagesT"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/addImgCategory">
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="5dp">
-
-                    <EditText
-                        android:id="@+id/enterH"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/TextAppearance.AppCompat.Body1"
-                        android:background="@null"
-                        android:hint="Enter Image Category Name"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/roboto_medium"
-                        android:textColor="@color/secondary"
-                        android:textSize="@dimen/H5"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
-
-                    <ImageView
-                        android:id="@+id/delete"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/svg_delete_lite"
-                        android:layout_margin="10dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_margin="5dp"
-                        android:src="@drawable/svg_edit"
-                        app:layout_constraintEnd_toStartOf="@id/delete"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/addImageCard"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        style="@style/CardViewTheme"
-                        app:cardCornerRadius="10dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginStart="10dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:cardBackgroundColor="@color/unselectedBackground"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/delete">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:gravity="center">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="20dp"
-                                android:src="@drawable/svg_upload_img"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_medium"
-                                android:text="Add Image"
-                                android:layout_marginTop="4dp"
-                                android:textColor="@color/secondary"
-                                android:textSize="@dimen/H7"/>
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/imagesRecycler"
@@ -179,7 +85,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            app:layout_constraintTop_toBottomOf="@id/imgCategoryLayout"
+            android:paddingBottom="100dp"
+            app:layout_constraintTop_toBottomOf="@id/addImgCategory"
             tools:listitem="@layout/item_img_category" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
