--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="5dp"
+    app:strokeColor="@color/secondary"
+    app:cardBackgroundColor="@color/white"
+    android:id="@+id/card"
     android:orientation="horizontal">
 
     <ImageView
@@ -13,4 +18,4 @@
         android:layout_margin="5dp"
         android:src="@drawable/svg_ac"/>
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
