--- a/app/src/main/res/layout/item_amenities.xml
+++ b/app/src/main/res/layout/item_amenities.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center"
-    android:orientation="horizontal">
+    android:layout_marginHorizontal="1dp"
+    android:layout_marginVertical="5dp"
+    android:id="@+id/card"
+    app:strokeColor="@color/secondary"
+    app:strokeWidth="0dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="5dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginHorizontal="8dp"
+        android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/amenityIcon"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginVertical="5dp"
-        android:layout_marginEnd="5dp"
         android:src="@drawable/svg_ac"/>
 
         <TextView
@@ -20,6 +31,8 @@
             android:layout_height="wrap_content"
             android:text="Child-friendly activities"
             android:textSize="@dimen/H5"
+            android:maxLines="2"
+            android:layout_marginHorizontal="8dp"
             android:textColor="@color/secondary"
             android:fontFamily="@font/roboto"/>
 
@@ -27,7 +40,7 @@
         android:id="@+id/remove"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginHorizontal="5dp"
         android:src="@drawable/svg_delete_lite"/>
 
-</LinearLayout>
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
