--- a/app/src/main/res/layout/item_ota_price.xml
+++ b/app/src/main/res/layout/item_ota_price.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,17 +15,25 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_gravity="center"
             android:src="@drawable/booking"
             android:layout_marginStart="30dp"
             />
 
         <TextView
+            android:id="@+id/txt_ota"
             style="@style/otaNameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/img"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
             android:paddingStart="8dp"
@@ -34,8 +42,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_gravity="center"
-            android:layout_marginStart="85dp"
             android:layout_marginEnd="10dp"
             android:gravity="center">
 
@@ -44,70 +53,70 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0"/>
+                app:layout_constraintGuide_percent="0.205"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".119"/>
+                app:layout_constraintGuide_percent=".285"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".224"/>
+                app:layout_constraintGuide_percent=".365"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".321"/>
+                app:layout_constraintGuide_percent=".447"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".42"/>
+                app:layout_constraintGuide_percent=".529"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".522"/>
+                app:layout_constraintGuide_percent=".61"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".625"/>
+                app:layout_constraintGuide_percent=".685"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".735"/>
+                app:layout_constraintGuide_percent=".757"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".84"/>
+                app:layout_constraintGuide_percent=".847"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/g10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".95"/>
+                app:layout_constraintGuide_percent=".93"/>
 
             <TextView
 
@@ -118,7 +127,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_gravity="center"
-                android:layout_marginStart="15dp"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
@@ -236,7 +244,6 @@
                 app:layout_constraintStart_toStartOf="@id/g10"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
@@ -244,6 +251,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
