--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -335,82 +335,58 @@
                                     android:inputType="text"
                                     android:textColor="@color/secondary"
                                     android:textColorHint="@color/secondary"
-                                    android:textSize="@dimen/H5" />
+                                    android:textSize="@dimen/H5"/>
 
                             </com.google.android.material.textfield.TextInputLayout>
 
-                            <com.google.android.material.card.MaterialCardView
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/propertyTypeLayout"
+                                style="@style/ClickableTextInputLayoutStyle"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
-                                android:layout_marginTop="10dp"
-                                app:cardBackgroundColor="@color/white"
-                                app:cardCornerRadius="10dp"
-                                >
-                                <RelativeLayout
+                                android:layout_height="wrap_content"
+                                android:hint="Property Type"
+                                android:layout_marginTop="5dp">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/propertyTypeET"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="match_parent"
+                                    android:fontFamily="@font/roboto"
+                                    android:inputType="text"
+                                    android:textColor="@color/secondary"
+                                    android:textColorHint="@color/secondary"
+                                    android:textSize="@dimen/H5"
+                                    android:focusable="false"
+                                    android:editable="false"
+                                    android:cursorVisible="false"
+                                    android:clickable="true"/>
 
-                                    <!-- Spinner -->
-                                    <Spinner
-                                        android:id="@+id/spinner"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:background="@color/white"
+                            </com.google.android.material.textfield.TextInputLayout>
 
-                                        android:spinnerMode="dropdown"
-                                        android:layout_centerVertical="true"
-
-                                        android:textSize="@dimen/H5"
-                                        android:textColor="@color/secondary" />
-
-                                    <ImageView
-                                        android:layout_width="25dp"
-                                        android:layout_height="25dp"
-                                        android:src="@drawable/svg_arrow_down"
-                                        app:tint="@color/black"
-                                        android:layout_marginEnd="10dp"
-                                        android:layout_centerVertical="true"
-                                        android:layout_alignParentEnd="true"/>
-
-                                </RelativeLayout>
-                            </com.google.android.material.card.MaterialCardView>
-
-                            <com.google.android.material.card.MaterialCardView
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/propertyRatingLayout"
+                                style="@style/ClickableTextInputLayoutStyle"
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
-                                android:layout_marginTop="10dp"
-                                app:cardBackgroundColor="@color/white"
-                                app:cardCornerRadius="10dp"
+                                android:layout_height="wrap_content"
+                                android:hint="Property Rating"
+                                android:layout_marginTop="5dp"
                                 >
-                                <RelativeLayout
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/propertyRatingET"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="match_parent"
+                                    android:fontFamily="@font/roboto"
+                                    android:inputType="text"
+                                    android:textColor="@color/secondary"
+                                    android:textColorHint="@color/secondary"
+                                    android:textSize="@dimen/H5"
+                                    android:focusable="false"
+                                    android:editable="false"
+                                    android:cursorVisible="false"
+                                    android:clickable="true"/>
 
-                                    <!-- Spinner -->
-                                    <Spinner
-                                        android:id="@+id/propertyRattingSpinner"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:background="@color/white"
-                                        android:spinnerMode="dropdown"
-                                        android:text="Property Rating"
-                                        android:layout_centerVertical="true"
-                                        android:textSize="@dimen/H5"
-                                        android:layout_marginStart="12dp"
-                                        android:textColor="@color/lightBlack" />
-
-                                    <ImageView
-                                        android:id="@+id/drop2"
-                                        android:layout_width="25dp"
-                                        android:layout_height="25dp"
-                                        android:src="@drawable/svg_arrow_down"
-                                        app:tint="@color/black"
-                                        android:layout_marginEnd="10dp"
-                                        android:layout_centerVertical="true"
-                                        android:layout_alignParentEnd="true"/>
-
-                                </RelativeLayout>
-                            </com.google.android.material.card.MaterialCardView>
+                            </com.google.android.material.textfield.TextInputLayout>
 
                         </LinearLayout>
 
