--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -862,6 +862,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="20dp"
             android:background="@drawable/corner_bottom_white_background"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent"
