--- a/app/src/main/res/layout/item_rate_plan_details.xml
+++ b/app/src/main/res/layout/item_rate_plan_details.xml
@@ -221,6 +221,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp">
@@ -878,6 +879,7 @@
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/roboto_bold"
                     android:padding="15dp"
+                    android:visibility="gone"
                     android:text="Cancel"
                     android:textColor="@color/black"
                     android:textSize="@dimen/H5"
